docs: fix spacing on reference space

--- a/.docs/css/theme.css
+++ b/.docs/css/theme.css
@@ -419,16 +419,23 @@ footer {
 	padding: 0;
 	list-style-type: none;
 	word-wrap: anywhere;
+	display: flex;
+	flex-direction: column;
+}
+.command-list > li {
+	margin: 0.25em 0;
 }
 .command-list > li > a {
 	text-decoration: none;
+	padding: 0;
 }
 .command-list.coloured code { background: var(--cat-colour); }
 .command-list code {
 	display: block;
 	padding: 0.5em;
 	box-sizing: border-box;
-	margin: 0.5em 0;
+	/* margin: 0.5em 0; */
+	margin: 0 0;
 }
 
 .filterable {
